package es.tiernoparla.daw.mercadaw.utils.reader.enumeracion;

/**
 * Enumeración que define los tipos de Lector.
 */
public enum TipoLector {
    MOCK, CSV, JSON, XML
}
