package es.tiernoparla.daw.mercadaw.utils.writer.enumeration;

public enum TipoDocumento {
    MOCK,EXCEL,DOCX,PDF;
}
